@@ -1,5 +1,8 @@
         - Generate a warning if no config is specified, or config
           is specified using the old key.
+        - Support the compute() method, and emulate it if the backend
+          doesn't have it.
+
 0.08
         - Forgot to add MRO::Compat to Makefile.PL, fail.
 
